--- a/DDVP/DDVP/Base.lproj/LaunchScreen.storyboard
+++ b/DDVP/DDVP/Base.lproj/LaunchScreen.storyboard
@@ -41,7 +41,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DDVP" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZlI-sF-V9c">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DDVP" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZlI-sF-V9c">
                                 <rect key="frame" x="87" y="242" width="201" height="183"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
