--- a/DDVP/DDVP/Base.lproj/Main.storyboard
+++ b/DDVP/DDVP/Base.lproj/Main.storyboard
@@ -259,7 +259,7 @@
         <!--Profile-->
         <scene sceneID="UtA-ep-k06">
             <objects>
-                <viewController id="0Ws-bu-gVh" customClass="LoginResultDetailViewController" customModule="DDVP" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="0Ws-bu-gVh" customClass="ProfileVC" customModule="DDVP" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5nk-xX-yAN"/>
                         <viewControllerLayoutGuide type="bottom" id="gSw-je-ghA"/>
@@ -272,29 +272,29 @@
                                 <rect key="frame" x="0.0" y="72" width="375" height="402"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="userIcon" translatesAutoresizingMaskIntoConstraints="NO" id="eUb-At-Wdd" userLabel="photo">
-                                        <rect key="frame" x="63" y="0.0" width="250" height="250"/>
+                                        <rect key="frame" x="62.5" y="0.0" width="250" height="250"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="250" id="GhN-5N-Fmc"/>
                                             <constraint firstAttribute="height" constant="250" id="slI-06-Dbw"/>
                                         </constraints>
                                     </imageView>
-                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="dMc-Sy-DMj" userLabel="photoActivity">
-                                        <rect key="frame" x="178" y="264" width="20" height="0.0"/>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="dMc-Sy-DMj" userLabel="photoActivity">
+                                        <rect key="frame" x="177.5" y="258.5" width="20" height="20"/>
                                     </activityIndicatorView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="test" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJP-Gf-z7i" userLabel="email">
-                                        <rect key="frame" x="173" y="265" width="30" height="21"/>
+                                        <rect key="frame" x="173" y="287" width="29.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="test" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OGf-tC-iZl" userLabel="name">
-                                        <rect key="frame" x="173" y="302" width="30" height="21"/>
+                                        <rect key="frame" x="173" y="315.5" width="29.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are logged in as" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kss-ey-zn2">
-                                        <rect key="frame" x="110" y="338" width="155" height="21"/>
+                                        <rect key="frame" x="110.5" y="344.5" width="154.5" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="3cg-Be-KZV"/>
                                         </constraints>
@@ -409,7 +409,7 @@
         <scene sceneID="JbI-IN-bhk">
             <objects>
                 <collectionViewController id="I7X-Cy-m0X" customClass="PresenterEventsCVC" customModule="DDVP" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="uEn-SY-Op0">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="uEn-SY-Op0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="nbu-6g-cJ8">
@@ -485,7 +485,7 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="btnAddEvent" destination="CY5-OR-Rjm" id="IYU-5x-D3b"/>
-                        <segue destination="495-lb-Qk8" kind="show" identifier="segueToPresenterQuestionList" id="TfD-jm-JGf"/>
+                        <segue destination="495-lb-Qk8" kind="show" identifier="segueToPollQuestionList" id="TfD-jm-JGf"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="irC-VX-Gxh" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -546,7 +546,7 @@
         <!--Event Name-->
         <scene sceneID="nIj-1S-itV">
             <objects>
-                <tableViewController id="495-lb-Qk8" customClass="PresenterEventDetailVC" customModule="DDVP" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="495-lb-Qk8" customClass="EventQuestionListVC" customModule="DDVP" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" sectionHeaderHeight="28" sectionFooterHeight="28" id="8Il-1D-iSc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -751,7 +751,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ffF-A2-WCn" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jtA-JS-lqf">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="jtA-JS-lqf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -826,7 +826,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Voting time left" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJ9-iw-Cij">
-                                <rect key="frame" x="16" y="626" width="343" height="21"/>
+                                <rect key="frame" x="16" y="582" width="343" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="Tar-ec-IaR"/>
                                 </constraints>
@@ -835,7 +835,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view hidden="YES" alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B7Y-d6-m65">
-                                <rect key="frame" x="82" y="402" width="210" height="210"/>
+                                <rect key="frame" x="82" y="402" width="210" height="166"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -898,6 +898,6 @@
         <image name="userIcon" width="400" height="277"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fVR-2J-ebX"/>
+        <segue reference="TfD-jm-JGf"/>
     </inferredMetricsTieBreakers>
 </document>
